--- a/app/views/subtrips/_seats_form.html.erb
+++ b/app/views/subtrips/_seats_form.html.erb
@@ -1,12 +1,19 @@
-<%= form_tag bookings_path do %>
-	<p> "Seats" </p>
-	<ul>
-		<% @subtrip.seats.each_with_index do |id, index| %>
-			<%= check_for_seat_state(id, index) %>
-		<% end %> <!-- Form End -->
-	</ul>
-	
-	<%= hidden_field_tag 'subtrip_id', @subtrip.id %>
-	<%= submit_tag 'Save' %>
-<% end -%>
+<div class="car_blueprint">
+	<%#= form_tag bookings_path do %>
+  <%= link_to gravatar(@subtrip.trip.driver, 43, "img-circle person driver"), profile_url(@subtrip.trip.driver) %> 
+	<% @subtrip.seats.each_with_index do |id, index| %>
+		<%#= check_for_seat_state(id, index) %>
+		<% if id == 0 %>
+			<%= image_tag( "https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/car_blueprints/seat_free_#{params[:locale]}.gif", size: "43x43", class: "img-circle person passenger-#{index+1}" ) %>
+		<% elsif id == -1 %>
 
+		<% else %>
+			<% user = User.find_by(id: id) %>
+  		<%= link_to gravatar(user, 43, "img-circle person passenger-#{index+1}"), profile_url(user) %> 
+		<% end %>
+	<% end %> <!-- Form End -->
+		
+		<%#= hidden_field_tag 'subtrip_id', @subtrip.id %>
+		<%#= submit_tag 'Save' %>
+	<%# end -%>		
+</div>
