--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -193,7 +193,7 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 				background: url('sd');
 				background-position: 1000px 0;
 				.stars{
-					background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/sprite_rating_stars.png');
+					// background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/sprite_rating_stars.png');
 					width: 70px;
 					height: 26px;
 					display: inline-block;
