--- a/app/assets/stylesheets/user_profile.css.scss
+++ b/app/assets/stylesheets/user_profile.css.scss
@@ -20,7 +20,7 @@ h2{
 		font-weight: bold;			
 	}	
 	.stars{
-		background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/sprite_rating_stars.png');
+		// background: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/sprite_rating_stars.png');
 		width: 147px;
 		height: 26px;
 	}	
