--- a/app/views/subtrips/show/_seats_order.html.erb
+++ b/app/views/subtrips/show/_seats_order.html.erb
@@ -1,10 +1,10 @@
-<div class="car_blueprint">
+<div class="blueprint_<%= @subtrip.vehicle_type %>">
 	<%#= form_tag bookings_path do %>
   <%= link_to gravatar(@subtrip.trip.driver, 43, "img-circle person driver"), profile_url(@subtrip.trip.driver) %> 
 	<% @subtrip.seats.each_with_index do |id, index| %>
 		<%#= check_for_seat_state(id, index) %>
 		<% if id == 0 %>
-			<%= image_tag( "https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/car_blueprints/seat_free_#{params[:locale]}.gif", size: "43x43", class: "img-circle person passenger-#{index+1}" ) %>
+			<%= image_tag( IMAGES_PATH+"blueprints/seat_free_#{params[:locale]}.gif", size: "43x43", class: "img-circle person passenger-#{index+1}" ) %>
 		<% elsif id == -1 %>
 
 		<% else %>
