--- a/app/views/trips/show/_subtrip_fields_edit.html.erb
+++ b/app/views/trips/show/_subtrip_fields_edit.html.erb
@@ -1,5 +1,8 @@
 <fieldset>
-  <span class="col-sm-3"><%= f.input :date_time, as: :time%></span>  
+  <span class="col-sm-3">  
+    <%#= am_pm f.object.date_time %>
+    <%= jalali_time f.object.date_time %>
+  </span>  
   <span class="col-sm-3"><%= f.object.origin.name %> </span>
   <span class="col-sm-3"><%= f.object.destination.name %> </span>
   <% if params[:locale] == 'en' %>
@@ -8,6 +11,6 @@
 		<span class="col-sm-2"><%= f.select :price, (0..100000).step(500).map{|s| ["#{t('currency', amount: s)}", s]},{}, {class: "time_select"} %></span>  	
   <% end %>
 
-  <%= f.hidden_field :_destroy %>
-  <%= link_to t('remove') , "#", class: "remove_fields col-sm-1 pull-left" %>  
+  <%#= f.hidden_field :_destroy %>
+  <%#= link_to t('remove') , "#", class: "remove_fields col-sm-1 pull-left" %>  
 </fieldset>
