--- a/app/assets/stylesheets/vehicles.css.scss
+++ b/app/assets/stylesheets/vehicles.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the vehicles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.vehicle_show{
+	img{
+		width: 100%;
+	}
+}
