--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New booking</h1>
+<div class="col-lg-8">
+	<%= render 'form' %>	
+</div>	
 
-<%= render 'form' %>
-
-<%= link_to 'Back', bookings_path %>
+<div class="col-lg-8">
+	<%= link_to 'Back to trip', @subtrip %>
+</div>
