--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,16 @@
 <div class="col-lg-8">
-	<%= render 'form' %>	
-</div>	
+	<div class="panel panel-default">
+  	<div class="panel-heading"><h4><%= t '.booking_message' %></h4></div>
+	  <div class="panel-body">
+			<div class="col-xs-7">
+				<%= render 'form' %>	
+			</div>
+			<div class="col-xs-5 blueprints">
+				<%= render 'bookings/new/seats_order' %>
+			</div>	 
+		</div>
+	</div>	
 
-<div class="col-lg-8">
-	<%= link_to 'Back to trip', @subtrip %>
+
 </div>
+
