bug fix and refactor create action of bookings

--- a/app/assets/stylesheets/subtrips.css.scss
+++ b/app/assets/stylesheets/subtrips.css.scss
@@ -8,6 +8,11 @@
 }
 
 .subtrip_single{
+	.subtrip_overview{
+		h3{
+			font-weight: bold;
+		}
+	}
 	.driver_overview{
 		.panel-heading{
 			padding: 0;
