--- a/app/views/subtrips/show/_subtrip_overview.html.erb
+++ b/app/views/subtrips/show/_subtrip_overview.html.erb
@@ -1,65 +1,67 @@
-<div class="panel panel-default ">
-	<div class="panel-heading">
-		<h2>
-			<%= @subtrip.destination.name %>
-			<span class="arrow-ie">&larr;</span> 
-			<%= @subtrip.origin.name %>
-			<% if @subtrip.price %>
-				<strong class="pull-<%= lang_other_side  %>">
-					<%= t 'currency', amount: currency(@subtrip.price) %>
-				</strong>
-			<% end %>
-		</h2>
-	</div>
+<div class="subtrip_overview">
+	<div class="panel panel-default ">
+		<div class="panel-heading">
+			<h2>
+				<%= @subtrip.destination.name %>
+				<span class="arrow-ie">&larr;</span> 
+				<%= @subtrip.origin.name %>
+				<% if @subtrip.price %>
+					<strong class="pull-<%= lang_other_side  %>">
+						<%= t 'currency', amount: currency(@subtrip.price) %>
+					</strong>
+				<% end %>
+			</h2>
+		</div>
 
-	<table class="table orogin-destination">
-	  <tbody>
-	  	<tr>
-	  		<th><%= t 'path' %></th>
-	  		<th><%= t 'from' %></th>
-	  		<td><%= print_cities_name(@subtrip.trip.first_city, @subtrip) %></td>
-	  	</tr>
+		<table class="table orogin-destination">
+		  <tbody>
+		  	<tr>
+		  		<th><%= t 'path' %></th>
+		  		<th><%= t 'from' %></th>
+		  		<td><%= print_cities_name(@subtrip.trip.first_city, @subtrip) %></td>
+		  	</tr>
 
-			<% @subtrip.trip.via_cities_obj.each do |s| %>
+				<% @subtrip.trip.via_cities_obj.each do |s| %>
+			  	<tr>
+			  		<th></th>
+			  		<th><%= t 'via' %></th>
+			  		<td><%= print_cities_name(s, @subtrip) %> </td>
+			  	</tr>
+				<% end %>
 		  	<tr>
 		  		<th></th>
-		  		<th><%= t 'via' %></th>
-		  		<td><%= print_cities_name(s, @subtrip) %> </td>
+		  		<th><%= t 'to' %></th>
+		  		<td><%= print_last_city_name(@subtrip.trip.last_city, @subtrip) %></td>
 		  	</tr>
-			<% end %>
-	  	<tr>
-	  		<th></th>
-	  		<th><%= t 'to' %></th>
-	  		<td><%= print_last_city_name(@subtrip.trip.last_city, @subtrip) %></td>
-	  	</tr>
 
-	  	<tr>
-	  		<th><%= t 'date_time'  %></th>
-	  		<th><%= t 'mydate'  %></th>
-	  		<td><%= jalali_date(@subtrip.date_time) %></td>
-	  	</tr>
-	  	
-	  	<tr>
-	  		<th></th>
-	  		<th><%= t 'at' %></th>
-	  		<td><%= jalali_time(@subtrip.date_time) %></td>
-	  	</tr>
-	  	<tr>
-	  		<th><%= t 'price' %></th>
-	  		<th><%= t 'currency', amount: @subtrip.price %></th>
-	  		<th> </th>
-	  	</tr>  	
-	 		<tr>
-	  		<th><%= t 'distance' %></th>
-	  		<th><%= t 'km', amount: @subtrip.origin.distance_to(@subtrip.destination).round(0) %></th>
-	  		<th>
-	  			<%= link_to t(".book_trip"), new_booking_path(trip: @subtrip.id), class: "btn btn-lg btn-warning" %>
-<%#= form_tag(new_booking_path, method: :get) do -%>
-  <%#= submit_tag "Book this trip", class: "btn btn-lg btn-warning"  %>
-<%# end -%>
+		  	<tr>
+		  		<th><%= t 'date_time'  %></th>
+		  		<th><%= t 'mydate'  %></th>
+		  		<td><%= jalali_date(@subtrip.date_time) %></td>
+		  	</tr>
+		  	
+		  	<tr>
+		  		<th></th>
+		  		<th><%= t 'at' %></th>
+		  		<td><%= jalali_time(@subtrip.date_time) %></td>
+		  	</tr>
+		  	<tr>
+		  		<th><%= t 'price' %></th>
+		  		<th><%= t 'currency', amount: @subtrip.price %></th>
+		  		<th> </th>
+		  	</tr>  	
+		 		<tr>
+		  		<th><%= t 'distance' %></th>
+		  		<th><%= t 'km', amount: @subtrip.origin.distance_to(@subtrip.destination).round(0) %></th>
+		  		<th>
+		  			<%= link_to t(".book_trip"), new_booking_path(trip: @subtrip.id), class: "btn btn-lg btn-warning" %>
+	<%#= form_tag(new_booking_path, method: :get) do -%>
+	  <%#= submit_tag "Book this trip", class: "btn btn-lg btn-warning"  %>
+	<%# end -%>
 
-	  		</th>
-	  	</tr>  	
-	  </tbody>
-	</table>
-</div>
+		  		</th>
+		  	</tr>  	
+		  </tbody>
+		</table>
+	</div>
+</div>	
