add alexa verification to head

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title><%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
+
+  <!-- dp2dxhgz2DSL0XBruyi43dku3so -->
+  <meta name="alexaVerifyID" content="dp2dxhgz2DSL0XBruyi43dku3so" />
+
+  <meta name="keywords"   content="بلیط اتوبوس, یافتن همسفر ,مسافرتهای بین شهری, dp2dxhgz2DSL0XBruyi43dku3so" />
+
   <meta name="LANGUAGE" content="fa" />
   <meta name="description" content="تسهیل در یافتن همسفر در مسافرت های بین شهری">
 
