some small changes in look and feel and css

--- a/app/views/profiles/show/_avatar_and_brief_for_small_screen.html.erb
+++ b/app/views/profiles/show/_avatar_and_brief_for_small_screen.html.erb
@@ -2,7 +2,7 @@
 	<div class="gravatar">
 		<%= render partial: 'profiles/show/gravatar', locals: {user: user} %>
 	</div>
-	<h1 class="nameOfUser"><small><%= user.name %></small></h1>	
+	<h2 class="nameOfUser"><small><%= link_to  user.name, profile_url(user) %></small></h2>	
 	<span class="stars" style="background-position:1431px 0px;"></span>
 	<p class="score">(4.5/5)</p> 
 	<%= resent_activity(user, "activity", "Last online: ") %>
