--- a/app/views/users/edit/_account_settings.html.erb
+++ b/app/views/users/edit/_account_settings.html.erb
@@ -16,6 +16,7 @@
 		<% end %>  
 
 		<%= f.input :password, 
+								 label: t('.new_password'),
 							   # hint: "leave blank if you don't want to change it.",
 							   placeholder: "password", 
 							   input_html: { autocomplete: "off" }
