--- a/app/views/profiles/show/_avatar_and_brief_for_large_screen.html.erb
+++ b/app/views/profiles/show/_avatar_and_brief_for_large_screen.html.erb
@@ -5,7 +5,7 @@
 		</div>
 	</div>
 	<div class="meta col-lg-7">
-		<h2 class="nameOfUser"><small><%= user.name %></small></h2>		
+		<h2 class="nameOfUser"><small><%= link_to  user.name, profile_url(user) %></small></h2>		
 		<span class="stars" style="background-position:1431px 0px;"></span>
 		<p class="score">(4.5/5)</p> 
 	</div>
