create a dropdown menu for profile in navbar menu

--- a/app/views/application/_popup_signin.html.erb
+++ b/app/views/application/_popup_signin.html.erb
@@ -1,4 +1,4 @@
-<li  class="dropdown hidden-xs">
+<li  class="dropdown">
   <a id="popup_signin_button" data-toggle="dropdown" class="dropdown-toggle" href="#"><%= t 'devise.sessions.form.sign_in' %><b class="caret"></b></a>
   <ul id="signin-dropdown" class="dropdown-menu">
     <li>
