--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -8,21 +8,19 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand visible-xs" href="#">
-<%= image_tag("#{IMAGES_PATH}logo-xs.gif") %>
+        <%= image_tag("#{IMAGES_PATH}logo-xs.gif") %>
       </a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-			<% if user_signed_in? %>
-				<li class="link"><%= link_to gravatar(current_user, 32, "img-rounded"), dashboard_path %> </li>
-				<li><%= link_to t("navbar.profile.edit"), edit_user_registration_path %></li>
-				<li><%= link_to t("navbar.profile.show"), profile_url(current_user) %></li>
-				<li><%= link_to t("navbar.session.sign_out"), destroy_user_session_path, method: :delete %>     
-        </li>
-			<% else %>
-        <%= render 'popup_signin' %>
-        <li><%= link_to t("navbar.user.sign_up"), new_user_registration_path %></li>
-			<% end %>	
+  			<% if user_signed_in? %>
+          <li><%= link_to  "", dashboard_path, class: "home" %></li>
+          <%= render 'application/nav/profile' %>
+  			<% else %>
+          <li><%= link_to  "", root_path, class: "home" %></li>
+          <%= render 'popup_signin' %>
+          <li><%= link_to t("navbar.user.sign_up"), new_user_registration_path %></li>
+  			<% end %>	
       </ul>
 
       <ul class="nav navbar-nav navbar-left">
