--- a/app/views/subtrips/show/_seats_order.html.erb
+++ b/app/views/subtrips/show/_seats_order.html.erb
@@ -8,8 +8,14 @@
 		<% elsif id == -1 %>
 
 		<% else %>
+			<!-- -- -->
 			<% user = User.find_by(id: id) %>
+			<% booking = user.bookings.where(subtrip_id: @subtrip.id).first %>
+  		<!-- -- -->
   		<%= link_to gravatar(user, 43, "img-circle person passenger-#{index+1}"), profile_url(user) %> 
+  		<% if booking.accaptance_status == 0 %>
+  			<%= image_tag( IMAGES_PATH+"blueprints/waiting_#{params[:locale]}.gif", size: "43x43", class: "waiting img-circle person passenger-#{index+1}" ) %>
+  		<% end %>
 		<% end %>
 	<% end %> <!-- Form End -->
 		
