--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Accaptance status:</strong>
-  <%= @booking.accaptance_status %>
+  <%= @booking.acceptance_status %>
 </p>
 
 <%= link_to 'Edit', edit_booking_path(@booking) %> |
