--- a/app/views/bookings/booking_acceptance.html.erb
+++ b/app/views/bookings/booking_acceptance.html.erb
@@ -2,8 +2,7 @@
 from: <%= @booking.subtrip.origin.name %> <br>
 to : <%= @booking.subtrip.destination.name %> <br>
 date: <%= @booking.subtrip.date_time %> <br>
-<%= @booking.accaptance_status %>
-<% if @booking.accaptance_status == 1 %>
+<% if @booking.acceptance_status == 1 %>
 	<p>The trip has been accepted</p>
 <% else %>
 	<p>The trip canceled</p>
