--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -15,7 +15,7 @@
     <% @bookings.each do |booking| %>
       <tr>
         <td><%= booking.passenger %></td>
-        <td><%= booking.accaptance_status %></td>
+        <td><%= booking.acceptance_status %></td>
         <td><%= link_to 'Show', booking %></td>
         <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
         <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
