--- a/app/views/user_mailer/booking_request_to_driver.html.erb
+++ b/app/views/user_mailer/booking_request_to_driver.html.erb
@@ -1,5 +1,5 @@
 Hello <%= @driver.name %>, <%#= @passenger.inspect %>
-<p><%= link_to @passenger.name, url_for(	host: "localhost:3000",
+<p><%= link_to @passenger.name, url_for(	host: @host,
 																			controller: 'profiles', 
 																			action: 'show', 
 																			id: @passenger.slug, 
@@ -40,9 +40,9 @@ Hello <%= @driver.name %>, <%#= @passenger.inspect %>
 
 <p>For acceptance of this reservation please click on accept button or reject</p>
 
-<%# accept = url_for(controller: 'bookings', action:'show', id: @booking.id,	 locale: 'fa', host: 'localhost:3000')  %>
-<% @accept_url = url_for(controller: 'bookings', action:'booking_acceptance', booking_id: @booking.id,	 locale: 'fa', host: 'localhost:3000', accept_status: @accept)  %>
-<% @reject_url = url_for(controller: 'bookings', action:'booking_acceptance', booking_id: @booking.id,	 locale: 'fa', host: 'localhost:3000', accept_status: @reject)  %>
+<%# accept = url_for(controller: 'bookings', action:'show', id: @booking.id,	 locale: 'fa', host: @host)  %>
+<% @accept_url = url_for(controller: 'bookings', action:'booking_acceptance', booking_id: @booking.id,	 locale: 'fa', host: @host, accept_status: @accept)  %>
+<% @reject_url = url_for(controller: 'bookings', action:'booking_acceptance', booking_id: @booking.id,	 locale: 'fa', host: @host, accept_status: @reject)  %>
 
 <%= link_to "Accept", @accept_url %> <br>
 <%= link_to "Reject", @reject_url %>
@@ -51,6 +51,6 @@ Hello <%= @driver.name %>, <%#= @passenger.inspect %>
 						 action:'show', 
 						 id: @booking.id,
 						 locale: 'fa',
-						 host: 'localhost:3000') %>">
+						 host: @host) %>">
 </a>
 <p>HamsafarYab's team</p>
